<resources>
    <string name="app_name">ShareList</string>
    <string name="email_str">Email</string>
    <string name="contraseña_str">Contraseña</string>
    <string name="iniciar_sesion_str">INICIAR SESIÓN</string>
    <string name="crear_cuenta_str">CREAR CUENTA</string>
    <string name="campos_no_validos_str">Campos no válidos</string>
    <string name="minimo6_caracteres_str">La contraseña debe tener mínimo 6 caracteres</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nueva_lista_str">Nueva lista</string>
    <string name="entrada_no_valida_str">Entrada no válida</string>
    <string name="nuevo_elemento_str">Nuevo elemento</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="anadir">Añadir</string>
    <string name="editar_lista_str">Editar lista</string>
    <string name="ya_registrado_str">E-mail ya registrado</string>
    <string name="cuenta_contraseña_incorrecta_str">Cuenta o contraseña incorrectas</string>
    <string name="cerrar_sesion_str">¿Cerrar sesión?</string>
    <string name="cancelar_str">Cancelar</string>
    <string name="listas_str">"  Listas"</string>
    <string name="sin_listas_str">Sin listas   :-(</string>
    <string name="ponle_nombre_a_tu_lista_str">Ponle un nombre a tu lista</string>
    <string name="ya_no_esta_en_mis_listas_str">\' ya no está en Mis Listas</string>
    <string name="items_str">"  Items"</string>
    <string name="item_borrado_str">item borrado</string>
    <string name="editar_str">Editar</string>
    <string name="borrar_str">Borrar</string>
    <string name="ponle_otro_nombre_al_item_str">Ponle otro nombre al item</string>
    <string name="elemento_modificado_str">Elemento modificado</string>
    <string name="error_ya_invitado_str">ERROR: Ya invitado</string>
    <string name="error_no_tienes_permisos_str">ERROR: No tienes permisos</string>
    <string name="abandonar_lista_str">Abandonar lista \'</string>
    <string name="borrar_lista_str">¿Borrar lista \'</string>
    <string name="error_nombre_no_valido_str">ERROR: Nombre no válido</string>
    <string name="nombre_cambiado_str">Nombre cambiado</string>
    <string name="volver_a_ver_todos_los_items_str">Volver a ver todos los items</string>
    <string name="motivo_para_destachar_str">Motivo para destachar</string>
    <string name="destachar_elemento_str">Destachar elemento</string>
    <string name="destachado_str">DESTACHADO</string>
    <string name="destachado_con_exito_str">Destachado con éxito</string>
    <string name="debe_introducir_un_motivo_str">Debe introducir un motivo</string>
    <string name="motivo_para_tachar_str">Motivo para tachar</string>
    <string name="tachar_elemento_str">Tachar elemento</string>
    <string name="tachado_str">TACHADO</string>
    <string name="tachado_con_exito_str">Tachado con éxito</string>
    <string name="volver_str">volver</string>
    <string name="ayuda_items_str">Desde aquí podrás añadir y ver los items de tu lista.\n\n Podrás invitar a otra persona que tenga ShareList y que esté registrada, sabiendo el e-mail con el que se registró.\n\nPulsando \'Info\' encontrarás más funciones...\n\nPara borrar la lista o cambiarle el nombre necesitarás ser administrador, pero no para abandonarla.\n\nSi mantienes pulsado sobre un item, podrás editarlo o borrarlo.</string>
    <string name="cargando_str">Cargando...</string>
    <string name="te_han_invitado_a_la_lista_str">Te han invitado a la lista \'</string>
    <string name="toca_para_verla_str">Toca para verla.</string>
    <string name="item_a_adido_por">Item añadido por:</string>
    <string name="estado_del_item">Estado del item:</string>
    <string name="tachar">Tachar</string>
    <string name="destachar">Destachar</string>
    <string name="cambiar_nombre_de_la_lista">Cambiar nombre de la lista</string>
    <string name="opciones">Opciones</string>
    <string name="borrar_lista">Borrar lista</string>
    <string name="abandonar_lista">Abandonar lista</string>
    <string name="administrador">Administrador</string>
    <string name="participantes">Participantes</string>
    <string name="bienvenido_str">\n\n¡Bienvenido!\n\nCrea listas para no olvidarte de nada y compártelas con quién tu quieras...\n\nEmpieza ya, creando una cuenta o iniciando sesión:\n</string>
    <string name="e_mail_del_usuario">E-mail del usuario</string>
    <string name="sin_resultados">Sin resultados</string>
    <string name="volver">VOLVER</string>
    <string name="ayuda_listas_str">Desde aquí podrás crear nuevas listas y ver aquellas en las que estás participando.\n\nSi pulsas sobre una de ellas se te mostrarán todos los elementos que contenga.\n\nSiempre que estés perdido, vuelve a entrar en \'Ayuda\'.\n\nDependiendo de donde te encuentres, te daremos consejos diferentes ;-)</string>
    <string name="añadir_item">Añadir item</string>
    <string name="invitar">Invitar</string>
    <string name="info">Info</string>
    <string name="sin_items">Sin items</string>
    <string name="añadir_una_nueva_lista">Añadir una nueva lista</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ayuda">Ayuda</string>
</resources>
