<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_lista"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.udc.psi1617.trabajotutelado.sharelist.InfoLista"
    android:orientation="vertical"
    android:background="@color/blanco">

    <TextView
        android:layout_marginBottom="10dp"
        android:textSize="30dp"
        android:textColor="@color/rojo"
        android:id="@+id/nom_lista_info"
        android:background="@color/blanco"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/cambiar_nombre_de_la_lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:background="@color/rojo"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/et_editar_lista"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/but_editar_lista"
            android:text="OK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:text="@string/opciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:background="@color/rojo"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:layout_marginBottom="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/but_borrar_lista"
            android:text="@string/borrar_lista"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/but_abandonar_lista"
            android:text="@string/abandonar_lista"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:text="@string/administrador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:background="@color/rojo"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tv_creador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/negro"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:text="@string/participantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:background="@color/rojo"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:layout_marginBottom="5dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_participantes" />

</LinearLayout>
